@@ -5,5 +5,5 @@ DIST VMware-server-linux-client-1.0.5-80187.zip 23571694 RMD160 47b60c8ca583687a
 DIST vmware-libcrypto.so.0.9.7l.tar.bz2 412159 RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 SHA1 f86c4cb076fe1764975e9243dc0fae763f2b589a SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12
 DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
 EBUILD vmware-server-console-1.0.4.56528.ebuild 2405 RMD160 715f6dfc9bd98ce7c82646cfa404a92fdba1d5a6 SHA1 0a92b1b71ec1f5f8037d79ad79691635cc054261 SHA256 6c25433325fa0c6af50ccd38accd8829a975493d716a196dde5b87a03206cabf
-EBUILD vmware-server-console-1.0.5.80187.ebuild 2047 RMD160 3f20236cf793595c4f7e2d7e354ca5157abca0ad SHA1 b7e289744a12755abcd9fe83fd089220b8c4268b SHA256 dd3e70adb6ecff44e3e5d443a820a60763478665a5d5e2282ed4dfdd484dd3f1
+EBUILD vmware-server-console-1.0.5.80187.ebuild 2150 RMD160 877fa993f4bef3d7bebf4fe87a3b0a6cfca20588 SHA1 23fab20b2c588be05c9f93847bf118c8be50e302 SHA256 c528ddfc2f78f6853e3ea1af2329a080ab668e97a56b3a296a3ea4967f1a22af
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
