@@ -49,4 +49,4 @@ EBUILD vmware-workstation-5.5.5.56455.ebuild 3102 RMD160 a8323412796d4f6d2c97560
 EBUILD vmware-workstation-5.5.6.80404.ebuild 3212 RMD160 dcf5953942e75e9f82786b0176ae24a7a50ad7e4 SHA1 a8c58268d27fc49e784e4693548eb2f91dcf2077 SHA256 ad2687fdfc5dc4c2f5a20eb4e73528151093cf88b9ea36677ee49aa1ebb12ec2
 EBUILD vmware-workstation-6.0.2.59824.ebuild 3696 RMD160 bdafb06042366e4a05aeb76f6bb2ffef6244c050 SHA1 69df59dc870890cd2c0224a884eaabe52ef5cf0d SHA256 0366a3ba6a3ddea60fcc0f25adf8e014b41ac1c15e258e45e5b832e5321e950b
 EBUILD vmware-workstation-6.0.3.80004.ebuild 4200 RMD160 243b5b5be40ed53bc42d18810b2248141d46a07e SHA1 c3cad0d96886bb808cf00734dac69a693b5c3e25 SHA256 b6f9b3e23cb05f13374777e03f31acb04b35f546d65ef67af9930a79d00cf0ed
-EBUILD vmware-workstation-6.5.0.84113.ebuild 4206 RMD160 788f1a4d6c99238353ab2aefbce5570f556304d7 SHA1 ccbb01e62d7fd96e2712f90945f53bbad176e053 SHA256 47752798ba01e61833fbee694207e50ef00dd7354e8375108a217c8d744cf169
+EBUILD vmware-workstation-6.5.0.84113.ebuild 4264 RMD160 8c676a43d6aff156255e829055df754de52e721e SHA1 c92b091e75dd4a61087c77a8205e7bf5d6071ea0 SHA256 32ec1c324c64e90dead1b89292985ff4a55ad94c9390b06cdec466ddbcd598f3
