@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  09 Apr 2008; Mike Auty <ikelos@gentoo.org>
+  app-emulation/vmware-server-console/vmware-server-console-1.0.5.80187.ebui
+  ld,
+  app-emulation/vmware-workstation/vmware-workstation-6.5.0.84113.ebuild:
+  Add fuse as dependency to vmware-workstation-6.5 (bug 217024).
+
   06 Apr 2008; Mike Auty <ikelos@gentoo.org>
   -app-emulation/open-vm-tools/open-vm-tools-0.0.20080213.77928.ebuild,
   +app-emulation/open-vm-tools/open-vm-tools-0.0.20080319.82724.ebuild:
